# hypr-rectangle

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  hypr-rectangle
.claude/: settings.local.json
examples/: hyprland.conf
src/: area.rs  cli.rs  dims.rs  dispatch.rs  gaps.rs  main.rs  state.rs
