[package]
name = "hypr-rectangle"
version = "0.1.0"
edition = "2021"
description = "Rectangle-like window management for Hyprland"
license = "MIT"
repository = "https://github.com/USER/hypr-rectangle"
readme = "README.md"
keywords = ["hyprland", "wayland", "window-manager", "tiling"]
categories = ["command-line-utilities"]

[dependencies]
hyprland = "0.4.0-beta.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"

[profile.release]
strip = true
lto = true
